syntax = 'proto3';

service InternalUserService{
  rpc findUserByUsername(FindByUsernameRequest) returns (UserView);
}

message FindByUsernameRequest{
  string username = 1;
}

message UserView{
  string username = 1;
}